feat: update page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import "../lib/styles/app.css";
 
 import i18next, { t } from "i18next";
+import { HeadHrefLangs } from "astro-i18next/components";
 
 export interface Props {
   title: string;
